Fixed an issue with forging db, also fixed spacing on mobile

--- a/css/quarx-mobile-styles.css
+++ b/css/quarx-mobile-styles.css
@@ -22,9 +22,7 @@
 }
 
 .ui-content { 
-    /*max-width: 300px; */
-    padding: 10px; 
-    margin: auto;
+    padding: 0 !important; 
 }
 
 /* Raw Grid Structure
