--- a/css/quarx-tablet-style.css
+++ b/css/quarx-tablet-style.css
@@ -21,10 +21,6 @@
     margin: auto;
 }
 
-#quarx-main-menu.ui-body-c{
-    background: transparent;
-}
-
 /* Menu
 ***************************************************************/
 #quarx-menu.quarx-menu-panel{
